<resources>
    <string name="app_name">Find a Film</string>
    <string name="snatch">Snatch</string>
    <string name="details">Details</string>
    <string name="lock_stock_and_two_smoking_barrels"><![CDATA[Lock ,stock & two smoking barrels]]></string>
    <string name="rocknrolla">RockNRolla</string>
    <string name="selected_film_image" translatable="false">selected film image</string>
    <string name="snatch_description">Stealing stones is hazardous</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="leave_your_comment">Leave your comment</string>
    <string name="lock_stock_description">They lost half a million at cards but they\'ve still got a few tricks up their sleeve</string>
    <string name="rocknrolla_description">Sex, guns and rock\'n\'roll</string>
    <string name="you_are_going_to_quit">You are going to quit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="switch_day_night_mode">Night mode</string>
</resources>
